--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -45,13 +45,40 @@ body {
 }
 
 .item {
+    width: 900px;
+    height: 30px;
+    margin-top: 5px;
     display: flex;
     justify-content: center;
     align-items: left;
+    font-size: 20px;
+    font-weight: 700;
+    border-radius: 20px 20px;
+    background-color: #413b3b;
 }
 
-.item :nth-child(7) {
+.item>* {
+    margin-left: 10px;
+    width: 110px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #dedcdc;
+}
+
+.info {
+    width: 110px;
+    height: 30px;
     background-color: #fff;
+    margin-left: 45px;
+    border-radius: 20px 20px;
+    transition: all 0.3s ease-out;
+}
+
+.info:hover {
+    background-color: #b3beb2;
+    transform: scale(1.05);
+    cursor: pointer;
 }
 
 #addButton {
@@ -61,7 +88,7 @@ body {
     justify-content: center;
     align-items: center;
     border-radius: 20px 20px;
-    color: 	rgba(85, 77, 77,0.9);
+    color: rgba(85, 77, 77, 0.9);
     background-color: rgba(201, 209, 200, 0.5);
     font-size: 22px;
     font-weight: 700;
@@ -82,7 +109,7 @@ body {
     justify-content: center;
     align-items: center;
     border-radius: 20px 20px;
-    color: 	rgba(85, 77, 77,0.9);
+    color: rgba(85, 77, 77, 0.9);
     background-color: rgba(201, 209, 200, 0.5);
     font-size: 22px;
     font-weight: 700;
