--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -17,7 +17,7 @@ body {
     max-height: 700px;
     position: relative;
     border: 3px solid rgba(255, 255, 255, 0.5);
-    background-color: rgba(255,255,255,0.3);
+    background-color: rgba(255, 255, 255, 0.3);
     border-radius: 15px;
     overflow: hidden;
     background-size: cover;
@@ -36,7 +36,8 @@ body {
 }
 
 .items {
-    margin-top: 10px;
+    margin-top: 5px;
+    margin-bottom: 10px;
     width: 900px;
     margin-right: 40px;
     display: flex;
@@ -77,23 +78,23 @@ body {
 .info {
     width: 110px;
     height: 30px;
-    background-color: rgba(0,116,217,0.8);
+    background-color: rgba(0, 116, 217, 0.8);
     margin-left: 45px;
     border-radius: 20px 20px;
     transition: all 0.3s ease-out;
 }
 
 .info:hover {
-   background-color: rgba(0, 96, 180, 1);
+    background-color: rgba(0, 96, 180, 1);
     transform: scale(1.05);
     cursor: pointer;
 }
 
-.name{
+.name {
     width: 180px;
     font-size: 15px;
     margin-right: 3px;
-    background-color: rgba(0,116,217,0.8);
+    background-color: rgba(0, 116, 217, 0.8);
 }
 
 #addButton {
@@ -137,6 +138,30 @@ body {
     cursor: pointer;
 }
 
+.legend {
+    width: 900px;
+    height: 20px;
+    margin-top: 5px;
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+}
+
+.legendItem {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-right: 5px;
+}
+
+.colorDiv {
+    width: 20px;
+    height: 20px;
+    border-radius: 20px 20px;
+    margin-right: 5px;
+}
+
 
 /*
 ------------------------------
@@ -145,17 +170,17 @@ body {
 */
 
 .green {
-    background-color: rgba(46,204,64,0.8);
+    background-color: rgba(46, 204, 64, 0.8);
 }
 
 .red {
-    background-color: rgba(255,65,54,0.8);
+    background-color: rgba(255, 65, 54, 0.8);
 }
 
 .black {
-    background-color: rgba(17,17,17,0.8);
+    background-color: rgba(17, 17, 17, 0.8);
 }
 
-.orange{
+.orange {
     background-color: rgba(242, 140, 5, 0.8);
 }
